# sgl

./: .gitignore  LICENSE  README.md  sgl.h
test/: .ycm_extra_conf.py  CMakeLists.txt  sgl_test.cpp  test.vcxproj
